# nested_protobuf_cmake

./: CMakeLists.txt  README.md  build.sh  clean.sh
src/: CMakeLists.txt  main.cpp
src/proto/: CMakeLists.txt  hello.proto
src/proto/child/: world.proto
